WIP: compile error in IDEA wth message "Error:java: exporting a package from system module java.xml.ws.annotation is not allowed with --release"
See https://bugs.openjdk.java.net/browse/JDK-8178152

Is there a way to avoid "--release" javac parameter in IDEA?

Issue: SPR-16469